--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@biaodian-web/basic": "^1.1.1",
+    "@vueuse/core": "^5.1.3",
+    "ant-design-vue": "^2.2.2",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.6",
+    "lodash": "^4.17.21",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -25,8 +30,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "prettier": "^2.2.1",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "less": "^3.8.1",
+    "less-loader": "^6.0.0",
+    "prettier": "^2.2.1"
   }
 }
